
v0.37.9		17-Sep-2003


v0.37.8		14-Sep-2003 - 17-Sep-2003

	general:
		This version is issued to prepare for a stable release.

	common.a:
		Added a set of general purpose timers.

	mbcico:
		Session handshake and EMSI handshake use the general purpose
		timers instead of the ttyio timers. This should prevent invalid
		timeouts during zmodem transfers. (bug since 0.37.6).


v0.37.7		09-Sep-2003 - 14-09-2003

	upgrade:
		A bit tricky to upgrade and start using the new debug logfile,
		follow the next steps exactly!!
		1.  Download and install the source
		2.  Run "./configure"
		3.  Run "make" (and do not install yet)
		4.  Run "mbstat close"
		5.  Backup /opt/mbse/bin and /opt/mbse/etc.
		6.  Run "mbstat close"
		7.  Kill mbtask, mostly "kill `/sbin/pidoff mbtask`" will do.
		8.  Run (as root) "make install" to install the new software.
		9.  Make sure you are user mbse again.
		10. Start mbtask manual, "mbtask"
		11. Run "mbsetup", enter menu 1, exit, save and close.
		12. Wait one minute.
		13. Run "mbstat open"
		After this is done the first time, restarting mbtask can be
		done as usual by running the mbsed init script. If something
		doesn't work (you get socket errors), it is important that you
		kill mbtask during software versions swap. All software must
		be of the same build.

	general:
		Debug logging is now in a separate file, the normal logging is
		now only in the normal logfiles.

	msgbase.a:
		Moved messages link from mbmsg program into library.

	mbcico:
		Fixed MB state error from the previous version.
		Rewrote another part of the binkp driver, initializing the
		options.
		If doesn't do Multiple Batch mode anymore against binkp/1.1
		mailers.
		File resync during receive finally works.
		In binkp we don't send a empty dataframe after a file anymore.

	mbtask:
		Added support for debug logfile. Dropped the debug switch for
		mbtask logging, this is now allways on.

	mbsetup:
		Added support for debug logging in menu 1.3 and removed the